test/files/neg/t6217.check
t6217.scala:11: warning: _root_ in root position of qualifier refers to the root package, not package _root_ in package p, which is in scope
    import _root_.scala.Option
           ^
1 warning
error: No warnings can be incurred under -Werror.
